# habit-tracker

./: .dockerignore  .env.example  .env.test  .gitattributes  .gitignore  Dockerfile  Dockerfile.zscaler  Pipfile  README.md  alembic.ini  build.sh  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  railway.toml
.github/workflows/: deploy-staging.yml  deploy.yml
alembic/: env.py
alembic/versions/: 44bfe95b7b50_add_time_entry_table_estimated_effort_.py  4a30fe0d63b9_add_sort_order_to_habit_table.py  7e7f1df4ed0f_add_time_entry_label_project_id_profile_.py  824920552c71_add_is_admin_field_to_user_table.py  9209b8ea610c_add_calendar_connection_table.py  95973b1999f3_initial_migration.py  9ea99964c4a7_add_parent_id_to_task_table.py  9ed98b38cd9f_add_profile_project_task_tables.py  a1f4c7b9e2d3_add_sort_order_to_task_table.py  a3d1e5f7c9b2_add_integration_base_url.py  b2c5e9d1a4f7_add_integration_connections_and_task_source.py  c8bde5259f5a_add_profile_preference_flags.py  d5f2a9c7b1e4_add_profile_insights_enabled.py  e7a2c9f1b3d8_add_countdown_table.py  f4b8d0c2a6e9_countdown_occurrence_and_profile_toggle.py  f98b7e66fdfd_refactor_tracker_status_column.py  fe9a3ef4cecc_add_scheduled_date_time_to_task_table.py
crud/: habits.py  trackers.py  users.py
models/: habits.py  trackers.py  users.py
routers/: habits.py  trackers.py  users.py
src/habit_tracker/: constants.py  database.py  main.py  models.py
src/habit_tracker/core/: config.py  crypto.py  dependencies.py  email.py  security.py
src/habit_tracker/models/: __init__.py  calendar_connections.py  countdowns.py  habits.py  imports.py  integrations.py  profiles.py  projects.py  tasks.py  time_entries.py  trackers.py  users.py
src/habit_tracker/routers/: auth.py  calendar_connections.py  countdowns.py  habits.py  imports.py  integrations.py  profiles.py  projects.py  tasks.py  time_entries.py  trackers.py  users.py
src/habit_tracker/schemas/: db_models.py
src/habit_tracker/services/: calendar_events.py  habit_stats.py  task_export.py
src/habit_tracker/services/integrations/: __init__.py  azure_devops.py  base.py  github.py
tests/: conftest.py  factories.py  test_api_docs.py  test_auth.py  test_authorization.py  test_bands.py  test_calendar_connections.py  test_dependencies.py  test_edge_cases.py  test_habits.py  test_imports.py  test_integrations.py  test_models.py  test_profiles.py  test_projects.py  test_security.py  test_task_export.py  test_tasks.py  test_time_entries.py  test_trackers.py  test_users.py  test_validation.py  test_workflows.py
