[project]
name = "habit_tracker"
version = "0.1.0"
description = "habit tracker api"
authors = [{name = "Justin Jones", email = "kugelblitz104@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv",
    "sqlalchemy",
    "fastapi[standard]",
    "pydantic[email]",
    "alembic>=1.17.0",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "passlib>=1.7.4",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.11.0",
    "asyncpg>=0.30.0",
]

[tool.uv]
package = true
native-tls = true

[project.scripts]
habit-tracker = "habit_tracker.main:app"
